--- a/explore.html
+++ b/explore.html
@@ -1,80 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Join the Cult</title>
+  <meta charset="UTF-8">
+  <title>Join the Cult</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="style.css">
-<script src="lang.js" defer></script>
+  <link rel="stylesheet" href="style.css">
+  <script src="lang.js" defer></script>
 </head>
 
 <body>
 
 <div class="form-box ritual">
 
-<img src="logo.jpg" class="form-logo">
+  <img src="logo.jpg" class="form-logo" alt="Logo">
 
-<!-- FORM START -->
-<form id="cultForm">
+  <!-- FORM -->
+  <form id="cultForm">
 
-  <div class="question-box">
-    <h2 data-key="info">Your Information</h2>
+    <div class="question-box">
+      <h2 data-key="info">Your Information</h2>
+      <input type="email" name="email" placeholder="Email ID" required>
+      <input type="text" name="name" placeholder="Full Name" required>
+      <input type="text" name="phone" placeholder="Phone Number" required>
+      <input type="text" name="country" placeholder="Country" required>
+    </div>
 
-    <input type="email" name="email" placeholder="Email ID" required>
-    <input type="text" name="name" placeholder="Name" required>
-    <input type="text" name="phone" placeholder="Phone Number" required>
-    <input type="text" name="country" placeholder="Country" required>
-  </div>
+    <div class="question-box">
+      <h2 data-key="reason">The Calling</h2>
+      <input type="text" name="reason"
+             placeholder="Why do you seek this path?"
+             required>
+    </div>
 
-  <div class="question-box">
-    <h2 data-key="reason">The Calling</h2>
-    <input type="text" name="reason" placeholder="Why do you seek this path?" required>
-  </div>
+    <button type="submit"
+            class="btn-submit"
+            data-key="submit">
+      Submit Request
+    </button>
 
-  <button type="submit" class="btn-submit" data-key="submit">
-    Submit Request
-  </button>
-
-</form>
-<!-- FORM END -->
+  </form>
 
 </div>
 
-<!-- GOOGLE SHEET SUBMIT SCRIPT -->
+<!-- SUBMIT SCRIPT -->
 <script>
-const form = document.getElementById("cultForm");
+  const form = document.getElementById("cultForm");
 
-form.addEventListener("submit", function(e) {
-  e.preventDefault();
+  form.addEventListener("submit", function (e) {
+    e.preventDefault();
 
-  const data = {
-    email: form.email.value,
-    name: form.name.value,
-    phone: form.phone.value,
-    country: form.country.value,
-    reason: form.reason.value
-  };
+    const formData = new FormData(form);
 
-  fetch("https://script.google.com/macros/s/AKfycbz_szqruBrjMWf9a1Y2ZOd_ttUOrC-HEDPDatgRx0whT-FoOVFvED4JQPDBvdmCUzZHLw/exec", {
-    method: "POST",
-    headers: {
-      "Content-Type": "application/json"
-    },
-    body: JSON.stringify(data)
-  })
-  .then(res => res.json())
-  .then(result => {
-    if (result.status === "success") {
+    fetch(
+      "https://script.google.com/macros/s/AKfycbz_szqruBrjMWf9a1Y2ZOd_ttUOrC-HEDPDatgRx0whT-FoOVFvED4JQPDBvdmCUzZHLw/exec",
+      {
+        method: "POST",
+        mode: "no-cors",
+        body: formData
+      }
+    )
+    .then(() => {
       window.location.href = "success.html";
-    } else {
+    })
+    .catch(() => {
       alert("Submission failed. Please try again.");
-    }
-  })
-  .catch(() => {
-    alert("Network error. Please try again later.");
+    });
   });
-});
 </script>
 
 </body>
